// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Utilities/Spacing/Margin Huge margin (96px) 1`] = `
<div
  className="SpacingDemo-outer-1574"
>
  <div
    className="NatDSSpacing-root-1575 NatDSSpacing-root-1576 SpacingDemo-root-1573"
  >
    <p
      className="MuiTypography-root SpacingDemo-inner-1572 MuiTypography-body1"
    >
      Spacing content
    </p>
  </div>
</div>
`;

exports[`Storyshots Utilities/Spacing/Margin Huge top margin (96px) 1`] = `
<div
  className="SpacingDemo-outer-1579"
>
  <div
    className="NatDSSpacing-root-1580 NatDSSpacing-root-1581 SpacingDemo-root-1578"
  >
    <p
      className="MuiTypography-root SpacingDemo-inner-1577 MuiTypography-body1"
    >
      Spacing content
    </p>
  </div>
</div>
`;

exports[`Storyshots Utilities/Spacing/Margin Large right margin (64px) 1`] = `
<div
  className="SpacingDemo-outer-1584"
>
  <div
    className="NatDSSpacing-root-1585 NatDSSpacing-root-1586 SpacingDemo-root-1583"
  >
    <p
      className="MuiTypography-root SpacingDemo-inner-1582 MuiTypography-body1"
    >
      Spacing content
    </p>
  </div>
</div>
`;

exports[`Storyshots Utilities/Spacing/Margin Micro bottom margin (4) 1`] = `
<div
  className="SpacingDemo-outer-1629"
>
  <div
    className="NatDSSpacing-root-1630 NatDSSpacing-root-1631 SpacingDemo-root-1628"
  >
    <p
      className="MuiTypography-root SpacingDemo-inner-1627 MuiTypography-body1"
    >
      Spacing content
    </p>
  </div>
</div>
`;

exports[`Storyshots Utilities/Spacing/Margin No margin (0px) 1`] = `
<div
  className="SpacingDemo-outer-1634"
>
  <div
    className="NatDSSpacing-root-1635 NatDSSpacing-root-1636 SpacingDemo-root-1633"
  >
    <p
      className="MuiTypography-root SpacingDemo-inner-1632 MuiTypography-body1"
    >
      Spacing content
    </p>
  </div>
</div>
`;

exports[`Storyshots Utilities/Spacing/Margin Semi bottom margin (32px) 1`] = `
<div
  className="SpacingDemo-outer-1589"
>
  <div
    className="NatDSSpacing-root-1590 NatDSSpacing-root-1591 SpacingDemo-root-1588"
  >
    <p
      className="MuiTypography-root SpacingDemo-inner-1587 MuiTypography-body1"
    >
      Spacing content
    </p>
  </div>
</div>
`;

exports[`Storyshots Utilities/Spacing/Margin Small horizontal margin (16px) 1`] = `
<div
  className="SpacingDemo-outer-1604"
>
  <div
    className="NatDSSpacing-root-1605 NatDSSpacing-root-1606 SpacingDemo-root-1603"
  >
    <p
      className="MuiTypography-root SpacingDemo-inner-1602 MuiTypography-body1"
    >
      Spacing content
    </p>
  </div>
</div>
`;

exports[`Storyshots Utilities/Spacing/Margin Small right margin (16px) 1`] = `
<div
  className="SpacingDemo-outer-1614"
>
  <div
    className="NatDSSpacing-root-1615 NatDSSpacing-root-1616 SpacingDemo-root-1613"
  >
    <p
      className="MuiTypography-root SpacingDemo-inner-1612 MuiTypography-body1"
    >
      Spacing content
    </p>
  </div>
</div>
`;

exports[`Storyshots Utilities/Spacing/Margin Small top margin (16px) 1`] = `
<div
  className="SpacingDemo-outer-1609"
>
  <div
    className="NatDSSpacing-root-1610 NatDSSpacing-root-1611 SpacingDemo-root-1608"
  >
    <p
      className="MuiTypography-root SpacingDemo-inner-1607 MuiTypography-body1"
    >
      Spacing content
    </p>
  </div>
</div>
`;

exports[`Storyshots Utilities/Spacing/Margin Standard left margin (24px) 1`] = `
<div
  className="SpacingDemo-outer-1599"
>
  <div
    className="NatDSSpacing-root-1600 NatDSSpacing-root-1601 SpacingDemo-root-1598"
  >
    <p
      className="MuiTypography-root SpacingDemo-inner-1597 MuiTypography-body1"
    >
      Spacing content
    </p>
  </div>
</div>
`;

exports[`Storyshots Utilities/Spacing/Margin Standard vertical margin (24px) 1`] = `
<div
  className="SpacingDemo-outer-1594"
>
  <div
    className="NatDSSpacing-root-1595 NatDSSpacing-root-1596 SpacingDemo-root-1593"
  >
    <p
      className="MuiTypography-root SpacingDemo-inner-1592 MuiTypography-body1"
    >
      Spacing content
    </p>
  </div>
</div>
`;

exports[`Storyshots Utilities/Spacing/Margin Tiny margin (8px) 1`] = `
<div
  className="SpacingDemo-outer-1619"
>
  <div
    className="NatDSSpacing-root-1620 NatDSSpacing-root-1621 SpacingDemo-root-1618"
  >
    <p
      className="MuiTypography-root SpacingDemo-inner-1617 MuiTypography-body1"
    >
      Spacing content
    </p>
  </div>
</div>
`;

exports[`Storyshots Utilities/Spacing/Margin Tiny right margin (8px) 1`] = `
<div
  className="SpacingDemo-outer-1624"
>
  <div
    className="NatDSSpacing-root-1625 NatDSSpacing-root-1626 SpacingDemo-root-1623"
  >
    <p
      className="MuiTypography-root SpacingDemo-inner-1622 MuiTypography-body1"
    >
      Spacing content
    </p>
  </div>
</div>
`;
